@@ -59,6 +59,9 @@ Minor Changes:
 Commands:
  * Removed the /functions, /attribs, /commands and /flags switches from
    @config. Use @list/<switch> instead. [MG]
+ * @decompile changes: added /name, the opposite of /db. You can now give a
+   '=<prefix>' without needing the /prefix switch, and can use other
+   switches with /tf, like @decomp/tf/flags <obj>. Suggestedby Trinsec. [MG]
 
 Functions:
  * llocks() without any arguments returns a list of the standard locks.
